improve wording for modified on disk warnings

BUG: 372638